--- a/angular.json
+++ b/angular.json
@@ -11,15 +11,18 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular/build:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/Portfolio-WeBear",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/index.html",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -27,7 +30,8 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "index": "src/index.html"
           },
           "configurations": {
             "production": {
