--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Portfolio-WeBear",
+            "outputPath": "dist/WeBear-WEB",
             "main": "src/main.ts",
             "polyfills": [
               "zone.js"
