--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,7 @@
               "src/assets",
               {
                 "glob": "**/*",
-                "input": "public"
-              },
-              {
-                "glob": "**/*",
-                "input": "src/app/images",
+                "input": "public",
                 "output": "/assets/images"
               }
             ],
